force-app/main/default/objects/b3f__Form__c/fields/b3f__Autosave__c.field-meta.xml
<CustomField>
    <fullName>b3f__Autosave__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Autosave</label>
    <type>Checkbox</type>
</CustomField>