force-app/main/default/objects/b3f__Form__c/fields/b3f__Back_Button__c.field-meta.xml
<CustomField>
    <fullName>b3f__Back_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Button</label>
    <type>Checkbox</type>
</CustomField>