force-app/main/default/objects/b3f__Form__c/fields/b3f__Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>b3f__Confirmation_Message__c</fullName>
    <description>HTML to display to user when they are finished with the form.</description>
    <label>Confirmation Message</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>