force-app/main/default/objects/b3f__Form__c/fields/b3f__Confirmation_URL__c.field-meta.xml
<CustomField>
    <fullName>b3f__Confirmation_URL__c</fullName>
    <description>URL the user will go to after saving the form.</description>
    <inlineHelpText>URL the user will be redirected to after saving the form.</inlineHelpText>
    <label>Confirmation URL</label>
    <type>Url</type>
</CustomField>