force-app/main/default/objects/b3f__Form__c/fields/b3f__Date_Available_End__c.field-meta.xml
<CustomField>
    <fullName>b3f__Date_Available_End__c</fullName>
    <label>Date Available End</label>
    <type>Date</type>
</CustomField>