force-app/main/default/objects/b3f__Form__c/fields/b3f__Date_Available_Start__c.field-meta.xml
<CustomField>
    <fullName>b3f__Date_Available_Start__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date Available Start</label>
    <type>Date</type>
</CustomField>