force-app/main/default/objects/b3f__Form__c/fields/b3f__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>b3f__Date_Format__c</fullName>
    <label>Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>dd/mm/yyyy</fullName>
                <default>true</default>
                <label>dd/mm/yyyy</label>
            </value>
            <value>
                <fullName>mm/dd/yyyy</fullName>
            </value>
            <value>
                <fullName>yyyy/mm/dd</fullName>
            </value>
            <value>
                <fullName>yyyy/dd/mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>