force-app/main/default/objects/b3f__Form__c/fields/b3f__DateTime_Format__c.field-meta.xml
<CustomField>
    <fullName>b3f__DateTime_Format__c</fullName>
    <defaultValue>&quot;dd/MM/yyyy HH:mm a&quot;</defaultValue>
    <label>DateTime Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>