force-app/main/default/objects/b3f__Form__c/fields/b3f__Default_Site__c.field-meta.xml
<CustomField>
    <fullName>b3f__Default_Site__c</fullName>
    <label>Default Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>