force-app/main/default/objects/b3f__Form__c/fields/b3f__Default_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>b3f__Default_Site_URL__c</fullName>
    <label>Default Site URL</label>
    <type>Url</type>
</CustomField>