force-app/main/default/objects/b3f__Form__c/fields/b3f__Draft_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>b3f__Draft_Button_Text__c</fullName>
    <defaultValue>&quot;Save as Draft&quot;</defaultValue>
    <label>Draft Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>