force-app/main/default/objects/b3f__Form__c/fields/b3f__Duplicate_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>b3f__Duplicate_Error_Message__c</fullName>
    <defaultValue>&quot;Looks like we found a duplicate record on our system. Please contact an Administrator.&quot;</defaultValue>
    <label>Duplicate Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>