force-app/main/default/objects/b3f__Form__c/fields/b3f__Enforce_Security_Protocols__c.field-meta.xml
<CustomField>
    <fullName>b3f__Enforce_Security_Protocols__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Security Protocols</label>
    <type>Checkbox</type>
</CustomField>