force-app/main/default/objects/b3f__Form__c/fields/b3f__Export_Pdf__c.field-meta.xml
<CustomField>
    <fullName>b3f__Export_Pdf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export Pdf</label>
    <type>Checkbox</type>
</CustomField>