force-app/main/default/objects/b3f__Form__c/fields/b3f__Finish_Blurb_Merge_Fields__c.field-meta.xml
<CustomField>
    <fullName>b3f__Finish_Blurb_Merge_Fields__c</fullName>
    <label>Finish Blurb Merge Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>