force-app/main/default/objects/b3f__Form__c/fields/b3f__Form_Complete_Flow__c.field-meta.xml
<CustomField>
    <fullName>b3f__Form_Complete_Flow__c</fullName>
    <label>Form Complete Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>