force-app/main/default/objects/b3f__Form__c/fields/b3f__Form_Style__c.field-meta.xml
<CustomField>
    <fullName>b3f__Form_Style__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Style</label>
    <referenceTo>b3f__Form_Style__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <type>Lookup</type>
</CustomField>