force-app/main/default/objects/b3f__Form__c/fields/b3f__Is_Form_Live__c.field-meta.xml
<CustomField>
    <fullName>b3f__Is_Form_Live__c</fullName>
    <formula>if( b3f__Date_Available_Start__c &gt; today() || b3f__Date_Available_End__c&lt; today(), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Form Live</label>
    <type>Checkbox</type>
</CustomField>