force-app/main/default/objects/b3f__Form__c/fields/b3f__Label_Placement__c.field-meta.xml
<CustomField>
    <fullName>b3f__Label_Placement__c</fullName>
    <label>Label Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Above</fullName>
                <default>true</default>
                <label>Above</label>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Bellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>