force-app/main/default/objects/b3f__Form__c/fields/b3f__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>b3f__Object_Label__c</fullName>
    <description>The label of the object which fields will be filled by this form.</description>
    <inlineHelpText>The label of the object which fields will be filled by this form.</inlineHelpText>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>