force-app/main/default/objects/b3f__Form__c/fields/b3f__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>b3f__Object_Name__c</fullName>
    <description>The API name of the object which fields will be filled by this form.</description>
    <inlineHelpText>The API name of the object which fields will be filled by this form.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>