force-app/main/default/objects/b3f__Form__c/fields/b3f__Require_Approval_Before_Submit__c.field-meta.xml
<CustomField>
    <fullName>b3f__Require_Approval_Before_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Approval Before Submit</label>
    <type>Checkbox</type>
</CustomField>