force-app/main/default/objects/b3f__Form__c/fields/b3f__Save_As_Draft__c.field-meta.xml
<CustomField>
    <fullName>b3f__Save_As_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save As Draft</label>
    <type>Checkbox</type>
</CustomField>