force-app/main/default/objects/b3f__Form__c/fields/b3f__Save_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>b3f__Save_Button_Text__c</fullName>
    <defaultValue>&quot;Save&quot;</defaultValue>
    <description>The text that will appear on the form&apos;s save button.</description>
    <inlineHelpText>The text that will appear on the form&apos;s save button.</inlineHelpText>
    <label>Save Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>