force-app/main/default/objects/b3f__Form__c/fields/b3f__Style__c.field-meta.xml
<CustomField>
    <fullName>b3f__Style__c</fullName>
    <description>JQuery UI Style</description>
    <label>Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>