force-app/main/default/objects/b3f__Form__c/fields/b3f__Title__c.field-meta.xml
<CustomField>
    <fullName>b3f__Title__c</fullName>
    <description>The title of the form.</description>
    <inlineHelpText>The title that will appear on the form. This can be left blank.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>