force-app/main/default/objects/b3f__Form__c/fields/b3f__Track_Changes_On_Save__c.field-meta.xml
<CustomField>
    <fullName>b3f__Track_Changes_On_Save__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Track Changes On Save</label>
    <type>Checkbox</type>
</CustomField>