force-app/main/default/objects/b3f__Form__c/fields/b3f__Unknown_DML_Error__c.field-meta.xml
<CustomField>
    <fullName>b3f__Unknown_DML_Error__c</fullName>
    <defaultValue>&quot;An error occurred while trying to submit your data! Please contact administrator to resolve the issue!&quot;</defaultValue>
    <label>Unknown DML Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>