force-app/main/default/objects/b3f__Form__c/fields/b3f__Use_Bootstrap__c.field-meta.xml
<CustomField>
    <fullName>b3f__Use_Bootstrap__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Bootstrap</label>
    <type>Checkbox</type>
</CustomField>