force-app/main/default/objects/b3f__Form__c/listViews/b3f__All.listView-meta.xml
<ListView>
    <fullName>b3f__All</fullName>
    <columns>NAME</columns>
    <columns>b3f__Object_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>